--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-http-backend": "^2.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-gallery": "^1.0.1",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.3",
     "react-icons": "^5.3.0",
@@ -29,6 +30,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
+    "react-transition-group": "^4.4.5",
     "slate": "^0.103.0",
     "slate-history": "^0.109.0",
     "slate-react": "^0.110.1",
